--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,14 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
+
+#logo {
+  padding-left: 1.5em;
+  padding-top: 1.5em;
+}
+
+#slogan{
+  padding-left: 1.5em;
+  padding-bottom: 1em;
+}
