--- a/src/app/pages/customers/customers.page.html
+++ b/src/app/pages/customers/customers.page.html
@@ -9,4 +9,44 @@
 
 <ion-content>
 
+  <!-- <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab> -->
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <ion-card-header>Alle Kunden</ion-card-header>
+          <ion-list>
+            <ion-item>
+              <ion-label>Test</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label>Test</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-label>Test</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card>
+          <ion-card-header>Operationen</ion-card-header>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
